# experiments

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  build.py  conanfile.py  first-build.bat  first-build.sh
src/Algorithms/: CMakeLists.txt  algorithms.hpp  algorithms.test.cpp  algorithms.v2.hpp  algorithms.v2.test.cpp  brainrefresh.hpp  brainrefresh.test.cpp  datetime.hpp  datetime.test.cpp  house.hpp  house.test.cpp
src/Algorithms/cci/: c1.hpp  c1.test.cpp  c2.hpp  c2.test.cpp  c3.hpp  c3.test.cpp  c4.hpp  c4.test.cpp  c5.hpp  c5.test.cpp
src/Algorithms/maze/: constexpr_matrix.hpp  constexpr_matrix.test.cpp  constexpr_maze.hpp  constexpr_maze.test.cpp  constexpr_random.hpp  constexpr_random.test.cpp  constexpr_stack.hpp  constexpr_stack.test.cpp
src/Asterix/: Asterix.cpp  Asterix.sln  CMakeLists.txt  app.cpp  app.hpp  world.cpp  world.hpp
src/Asterix/Asterix/: Asterix.cpp  Asterix.vcxproj  Asterix.vcxproj.filters  CMakeLists.txt  ReadMe.txt  app.cpp  stdafx.cpp  stdafx.h  world.cpp  world.hpp
src/Asterix/AsterixCinder/: AsterixApp.cpp  AsterixApp.h  AsterixCinder.cpp  AsterixCinder.vcxproj  AsterixCinder.vcxproj.filters  Particle.cpp  Particle.h  ParticleController.cpp  ParticleController.h  ReadMe.txt  stdafx.cpp
src/Asterix/assets/: Asterix.xcf
src/Asterix/sdlxx/: CMakeLists.txt  assets.hpp  events.hpp  geometry.hpp  graphics.hpp  init.hpp  sdl_disabled_warnings.h  sounds.hpp  sprites.hpp  texts.hpp
src/BoolExprParser/: BoolExprParser.vcxproj  BoolExprParser.vcxproj.filters  CMakeLists.txt  parser.manual.h  parser.test.cpp  unique_ptr98.h  unique_ptr98.test.cpp
src/Circuit/: CMakeLists.txt  Car.h  Cell.h  Circuit.cpp  Circuit.vcxproj  Circuit.vcxproj.filters  EventDispatcher.h  Game.h  ModeSupport.cpp  ModeSupport.h  Resources.h  Track.h  packages.config
src/Concurrency/: CMakeLists.txt  concurrency.hpp  concurrency.test.cpp  concurrency_threadpool.hpp  execution-hoberock.hpp  execution-niebler-msvc.hpp  execution-niebler.hpp  execution.hpp  execution.test.cpp  execution_detail_concepts.hpp  execution_detail_decl.hpp  execution_detail_impl.hpp  execution_models.hpp  execution_niebler.hpp  execution_synopsis.hpp  executors.hpp  executors.test.cpp  main.cpp
src/DelaySubTitles/: CMakeLists.txt  delaysubtitles.hpp  main.cpp
src/DetectionIdiom/: CMakeLists.txt  build-and-test.sh
src/KennyKerr/: CMakeLists.txt  KennyKerr.vcxproj  KennyKerr.vcxproj.filters  articles.txt  compatibility.h  employee.cpp  mini_xml1.cpp  roman.cpp  safe_printf.h  safe_printf.test.cpp  srw_lock.h  srw_lock.test.cpp
src/Khewil/: .gitignore  CMakeLists.txt  _build_.bat  build_test.bat  build_thirdparties.bat
src/TestApi/: CMakeLists.txt  TestApi.sln
src/TestApi/TestApiClientCpp/: CMakeLists.txt  TestApiClientCpp.cpp  TestApiClientCpp.vcxproj  TestApiClientCpp.vcxproj.filters  stdafx.h
src/TestApi/TestApiClientNet/: CMakeLists.txt  Program.cs  TestApiClientNet.csproj
src/TestApi/TestApiClientPy/: TestApi.py  TestApiClientPy.py  TestApiClientPy.pyproj
src/TestApi/TestApiDll/: CMakeLists.txt  TestApiDll.vcxproj  TestApiDll.vcxproj.filters
src/TestApi/TestApiDllNet/: CMakeLists.txt  TestApi.cs  TestApiDllNet.csproj
src/TestApi/TestOliveC/: CMakeLists.txt  TestOliveC.cpp  TestOliveC.h  TestOliveC.vcxproj  TestOliveC.vcxproj.filters
src/TestApi/TestOliveCSharp/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  Program.cs  TestOlive.cs  TestOliveCSharp.csproj
src/TestApi/TestOliveCppCli/: AssemblyInfo.cpp  CMakeLists.txt  ReadMe.txt  Stdafx.cpp  TestOliveCppCli.cpp  TestOliveCppCli.h  TestOliveCppCli.vcxproj  TestOliveCppCli.vcxproj.filters
src/TestIterators/: CMakeLists.txt  Enumerable.h  EnumerableCollection.h  EnumerableIterator.h  IndexedCollection.h  IndexedIterator.h  Item.h  TestIterators.cpp  TestIterators.sln  TestIterators.vcxproj  TestIterators.vcxproj.filters
src/TestModules/: CMakeLists.txt  TestModules.sln
src/TestModules/MyModuleConsumer/: MyModuleConsumer.cpp  MyModuleConsumer.vcxproj  MyModuleConsumer.vcxproj.filters
src/TestModules/MyModuleDll/: MyModuleDll.cpp  MyModuleDll.vcxproj  MyModuleDll.vcxproj.filters
src/TestModules/MyModuleLib/: MyModuleLib.cpp  (+2 more)
src/TestSOCI/: CMakeLists.txt  TestSOCI.hpp  TestZeromq.hpp  build.bat  main.cpp
src/VCard/: CMakeLists.txt  build.bat  conanfile.py  main.cpp  vcard.cpp  vcard.hpp
src/cellang/: CMakeLists.txt  lexer.hpp  lexer.test.cpp  parser.hpp  parser.test.cpp
src/coroutines/: CMakeLists.txt  coroutines.test.cpp  main.cpp  resumable_thing.hpp
src/error_handling/: CMakeLists.txt  contracts.cpp  contracts.gtest.cpp  contracts.gtest.hpp  contracts.hpp  gtest_fake.hpp  libcpp_debug.test.cpp  signal_handler.hpp  signal_handler.test.cpp  uncaught_exception.cpp
src/fp_in_cpp/: CMakeLists.txt  chapter10.hpp  chapter10.test.cpp  chapter2.hpp  chapter2.test.cpp  chapter8.hpp  chapter8.test.cpp  itcppcon17_monads.hpp  itcppcon17_monads.test.cpp
src/ocv/: CMakeLists.txt  main.cpp
src/platform/: CMakeLists.txt  filesystem.hpp  format.hpp  platform.h  ranges.hpp  string_view.hpp  system_error.hpp  variant.hpp
src/rabbits_and_foxes/: CMakeLists.txt  board.cpp  board.hpp  board.test.cpp  board_json.hpp  geometry.hpp  main.cpp  pieces.cpp  pieces.hpp  pieces_json.hpp  pieces_ranges.hpp  solver.cpp  solver.hpp  visual_app.cpp  visual_app.hpp  visual_config.cpp  visual_config.hpp  visual_views.cpp  visual_world.cpp  visual_world.hpp
src/recover_photos/: CMakeLists.txt  main.cpp  options.cpp  options.hpp  photos.cpp  photos.hpp
src/sdlxx/: CMakeLists.txt  assets.hpp  error_handling.hpp  geometry.hpp  graphics.hpp  init.hpp  outcome_disabled_warnings.hpp  raii.hpp  sdl_disabled_warnings.h  sounds.hpp  sprites.hpp  texts.hpp
src/sqlgen/: CMakeLists.txt  sqlgen.compat.hpp  sqlgen.def.hpp  sqlgen.expr.hpp  sqlgen.gen.hpp  sqlgen.hpp  sqlgen.oper.hpp  sqlgen.test.cpp  sqlgen.traits.hpp
src/thirdparties/: .gitignore  CMakeLists.txt  build.bat
src/twolibs/: CMakeLists.txt  Exe0.cpp  Lib1.cpp  Lib1.hpp  Lib2.cpp  Lib2.hpp
(+177 files in other folders)
