cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(TestSOCI)

if("${BUILD_PROP_THIRDPARTIES_INSTALL_DIR}" STREQUAL "")
	set(BUILD_PROP_THIRDPARTIES_INSTALL_DIR "C:/DEV/EXPERIMENTS/THIRDPARTIES/install")
endif()

set(BUILD_PROP_THIRDPARTY_SOCI_INSTALL_DIR "${BUILD_PROP_THIRDPARTIES_INSTALL_DIR}/soci-3.2.3")
set(BUILD_PROP_THIRDPARTY_SOCI_INC_DIR "${BUILD_PROP_THIRDPARTY_SOCI_INSTALL_DIR}/inc")
set(BUILD_PROP_THIRDPARTY_SOCI_LIB_DIR "${BUILD_PROP_THIRDPARTY_SOCI_INSTALL_DIR}/lib")

include_directories(${BUILD_PROP_THIRDPARTY_SOCI_INC_DIR})
link_directories(${BUILD_PROP_THIRDPARTY_SOCI_LIB_DIR})

set(BUILD_PROP_THIRDPARTY_SQLITE_INSTALL_DIR "${BUILD_PROP_THIRDPARTIES_INSTALL_DIR}/sqlite-3.9.1")
set(BUILD_PROP_THIRDPARTY_SQLITE_INC_DIR "${BUILD_PROP_THIRDPARTY_SQLITE_INSTALL_DIR}/inc")
set(BUILD_PROP_THIRDPARTY_SQLITE_INC_DIR "${BUILD_PROP_THIRDPARTY_SQLITE_INSTALL_DIR}/inc/sqlite3")
set(BUILD_PROP_THIRDPARTY_SQLITE_LIB_DIR "${BUILD_PROP_THIRDPARTY_SQLITE_INSTALL_DIR}/lib")

include_directories(${BUILD_PROP_THIRDPARTY_SQLITE_INC_DIR})
link_directories(${BUILD_PROP_THIRDPARTY_SQLITE_LIB_DIR})

include_directories(..)

add_executable(TestSOCI main.cpp TestSOCI.hpp)

target_link_libraries(TestSOCI soci_sqlite3_3_2.lib soci_core_3_2.lib sqlite3.lib)
