cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(TestSOCI)

if("${BUILD_PROP_THIRDPARTIES_INSTALL_DIR}" STREQUAL "")
	set(BUILD_PROP_THIRDPARTIES_INSTALL_DIR "C:/DEV/EXPERIMENTS/THIRDPARTIES/install")
endif()

set(BUILD_PROP_THIRDPARTY_SOCI_INSTALL_DIR "${BUILD_PROP_THIRDPARTIES_INSTALL_DIR}/soci-3.2.3")
set(BUILD_PROP_THIRDPARTY_SOCI_INC_DIR "${BUILD_PROP_THIRDPARTY_SOCI_INSTALL_DIR}/inc")
set(BUILD_PROP_THIRDPARTY_SOCI_LIB_DIR "${BUILD_PROP_THIRDPARTY_SOCI_INSTALL_DIR}/lib")

include_directories(${BUILD_PROP_THIRDPARTY_SOCI_INC_DIR})
link_directories(${BUILD_PROP_THIRDPARTY_SOCI_LIB_DIR})

set(BUILD_PROP_THIRDPARTY_SQLITE_INSTALL_DIR "${BUILD_PROP_THIRDPARTIES_INSTALL_DIR}/sqlite-3.9.1")
set(BUILD_PROP_THIRDPARTY_SQLITE_INC_DIR "${BUILD_PROP_THIRDPARTY_SQLITE_INSTALL_DIR}/inc")
set(BUILD_PROP_THIRDPARTY_SQLITE_INC_DIR "${BUILD_PROP_THIRDPARTY_SQLITE_INSTALL_DIR}/inc/sqlite")
set(BUILD_PROP_THIRDPARTY_SQLITE_LIB_DIR "${BUILD_PROP_THIRDPARTY_SQLITE_INSTALL_DIR}/lib")

include_directories(${BUILD_PROP_THIRDPARTY_SQLITE_INC_DIR})
link_directories(${BUILD_PROP_THIRDPARTY_SQLITE_LIB_DIR})

set(BUILD_PROP_THIRDPARTY_PROTOBUF_INSTALL_DIR "${BUILD_PROP_THIRDPARTIES_INSTALL_DIR}/protobuf-3.0.0-beta-1")
set(BUILD_PROP_THIRDPARTY_PROTOBUF_INC_DIR "${BUILD_PROP_THIRDPARTY_PROTOBUF_INSTALL_DIR}/inc")
set(BUILD_PROP_THIRDPARTY_PROTOBUF_LIB_DIR "${BUILD_PROP_THIRDPARTY_PROTOBUF_INSTALL_DIR}/lib")
set(BUILD_PROP_THIRDPARTY_PROTOBUF_BIN_DIR "${BUILD_PROP_THIRDPARTY_PROTOBUF_INSTALL_DIR}/bin")

include_directories(${BUILD_PROP_THIRDPARTY_PROTOBUF_INC_DIR})
link_directories(${BUILD_PROP_THIRDPARTY_PROTOBUF_LIB_DIR})

include_directories(..)

add_custom_command(
	OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/testproto.pb.cc" "${CMAKE_CURRENT_SOURCE_DIR}/testproto.pb.h"
	COMMAND "${BUILD_PROP_THIRDPARTY_PROTOBUF_BIN_DIR}/protoc.exe" "--proto_path=${CMAKE_CURRENT_SOURCE_DIR}" "--cpp_out=${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/testproto.proto"
	DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/testproto.proto"
	MAIN_DEPENDENCY "${CMAKE_CURRENT_SOURCE_DIR}/testproto.proto"
	WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
	)

set_source_files_properties("${CMAKE_CURRENT_SOURCE_DIR}/testproto.pb.cc" PROPERTIES COMPILE_FLAGS /wd4251)

add_executable(
	TestSOCI
	main.cpp TestSOCI.hpp "${CMAKE_CURRENT_SOURCE_DIR}/testproto.pb.cc" "${CMAKE_CURRENT_SOURCE_DIR}/testproto.pb.h"
	)

target_compile_definitions(
	TestSOCI
	PRIVATE PROTOBUF_USE_DLLS
	)

target_link_libraries(
	TestSOCI soci_sqlite3_3_2.lib soci_core_3_2.lib sqlite3.lib libprotobuf.lib
	)
